OWB-1248 for java 11 fallbacks on the 'not unsafe' mode
git-svn-id: https://svn.apache.org/repos/asf/openwebbeans/trunk@1835726 13f79535-47bb-0310-9956-ffa450edef68